# nimool

./: Cargo.toml  README.md
indexes/new_index/: meta.json
indexes/test/: .managed.json  meta.json
src/: logo.rs  main.rs
src/config/: mod.rs
src/db/: catalog.rs  command.rs  document.rs  error.rs  mod.rs  pool.rs  util.rs
src/db/config/: mod.rs
src/db/idx/: mod.rs
src/db/schema/: mod.rs
src/db/search/: mod.rs
src/router/: handler.rs  mod.rs
