[package]
name = "rlastic_search"
version = "0.1.0"
authors = ["Hamed <hfazaely1984@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4.6"
lazy_static = "1.3.0"
uuid = { version = "0.7", features = ["serde", "v4"] }
serde = { version = "1.0.92", features = ["derive"] }
serde_json = "1.0.39"
tantivy = "0.9.1"
hyper = "0.12.29"
futures = "0.1.27"
tokio = "0.1.21"
regex = "1"
bytes = "0.4.12"